# simple_naptha_mcp

./: pyproject.toml
simple_naptha_mcp/: run.py  schemas.py  server.py
simple_naptha_mcp/configs/: deployment.json
